// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts PublicLayout should render PublicLayout component 1`] = `
<div
  id="LayoutBase"
/>
`;

exports[`layouts PublicLayout should render PublicLayout with children 1`] = `
<div
  id="LayoutBase"
>
  Some children
</div>
`;
